Fix line-wrapping and whitespace for snippets
This had been fixed before but I accidentally broke it when trying to
remove something else

--- a/static/css/code.less
+++ b/static/css/code.less
@@ -10,8 +10,9 @@
         border: 1px solid @lightGrey;
         .border-radius(7px);
 
-        .line p {
+        .line {
             white-space: pre-wrap;
+            word-wrap: break-word;
         }
     }
 
